--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                 <img class="img-fluid rounded" src="img/preventivo.jpg" alt="">
                 </div>
                 <div class="col-md-12 col.sm-12">
-                  <h3>Email<br>info@pettirossilinealegno.com </h3>
+                  <h3 style="font-size:4vw;">Email<br>info@pettirossilinealegno.com </h3>
                 </div>
                 <div class="col-md-12 col-sm-12">
-                  <h3>Telefono <br>339 431 3791</h3>
+                  <h3 style="font-size:4vw">Telefono <br>339 431 3791</h3>
                 </div>
               </div>
             </div>
