--- a/products.html
+++ b/products.html
@@ -111,20 +111,6 @@
               </a>
           </div>
           <div class="col-lg-4 padding">
-              <a href="myModal" data-toggle="modal" data-target="#myModal9">
-              <div class="img-hover">
-              </div>
-              <img class="img-fluid rounded" src="img/tettoie a sbalzo/principale.jpg" alt="">
-              </a>
-          </div>
-          <div class="col-lg-4 padding">
-              <a href="myModal" data-toggle="modal" data-target="#myModal10">
-              <div class="img-hover">
-              </div>
-              <img class="img-fluid rounded" src="img/fioriere/principale.jpg" alt="">
-              </a>
-          </div>
-          <div class="col-lg-4 padding">
               <a href="myModal" data-toggle="modal" data-target="#myModal11">
               <div class="img-hover">
               </div>
@@ -275,6 +261,9 @@
                 <img class="img-fluid rounded" src="img/att commerciali/14.jpg" alt="">
                 </div>
                 <div class="col-lg-6 padding">
+                <img class="img-fluid rounded" src="img/att commerciali/14.jpg" alt="">
+                </div>
+                <div class="col-lg-6 padding">
                 <img class="img-fluid rounded" src="img/att commerciali/9.jpg" alt="">
                 </div>
                 <div class="col-lg-6 padding">
@@ -315,6 +304,15 @@
                 </div>
                 <div class="col-lg-6 padding">
                 <img class="img-fluid rounded" src="img/tettoie/12.jpg" alt="">
+                </div>
+                <div class="col-lg-6 padding">
+                <img class="img-fluid rounded" src="img/tettoie/13.jpg" alt="">
+                </div>
+                <div class="col-lg-6 padding">
+                <img class="img-fluid rounded" src="img/tettoie/14.jpg" alt="">
+                </div>
+                <div class="col-lg-6 padding">
+                <img class="img-fluid rounded" src="img/tettoie/15.jpg" alt="">
                 </div>
                 <div class="col-lg-6 padding">
                 <img class="img-fluid rounded" src="img/tettoie/2.jpg" alt="">
@@ -417,6 +415,15 @@
                 <div class="col-lg-6 padding">
                 <img class="img-fluid rounded" src="img/gazebo/18.jpg" alt="">
                 </div>
+                <div class="col-lg-6 padding">
+                <img class="img-fluid rounded" src="img/gazebo/19.jpg" alt="">
+                </div>
+                <div class="col-lg-6 padding">
+                <img class="img-fluid rounded" src="img/gazebo/20.jpg" alt="">
+                </div>
+                <div class="col-lg-6 padding">
+                <img class="img-fluid rounded" src="img/gazebo/21.jpg" alt="">
+                </div>
             </div>
           </div>
           <div class="modal-footer">
@@ -439,6 +446,12 @@
           <div class="modal-body">
             <div class="container-fluid">
               <div class="row">
+                <div class="col-lg-6 padding">
+                <img class="img-fluid rounded" src="img/pergolati/28.jpg" alt="">
+                </div>
+                <div class="col-lg-6 padding">
+                <img class="img-fluid rounded" src="img/pergolati/29.jpg" alt="">
+                </div>
                 <div class="col-lg-6 padding">
                 <img class="img-fluid rounded" src="img/pergolati/1.jpg" alt="">
                 </div>
@@ -626,37 +639,34 @@
       </div>
     </div>
   </div>
-  <!-- Modal 11-->
-  <div class="modal fade" id="myModal11" role="dialog">
+  <!-- Modal 8-->
+  <div class="modal fade" id="myModal8" role="dialog">
     <div class="modal-dialog modal-lg">
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Garage</h4>
+          <h4 class="modal-title">Coperture Ingressi</h4>
         </div>
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-6 padding">
-              <img class="img-fluid rounded" src="img/garage/1.jpg" alt="">
+              <img class="img-fluid rounded" src="img/coperture ingressi/1.jpg" alt="">
               </div>
               <div class="col-lg-6 padding">
-              <img class="img-fluid rounded" src="img/garage/2.jpg" alt="">
+              <img class="img-fluid rounded" src="img/coperture ingressi/2.jpg" alt="">
               </div>
               <div class="col-lg-6 padding">
-              <img class="img-fluid rounded" src="img/garage/3.jpg" alt="">
+              <img class="img-fluid rounded" src="img/coperture ingressi/3.jpg" alt="">
               </div>
               <div class="col-lg-6 padding">
-              <img class="img-fluid rounded" src="img/garage/4.jpg" alt="">
+              <img class="img-fluid rounded" src="img/coperture ingressi/4.jpg" alt="">
               </div>
               <div class="col-lg-6 padding">
-              <img class="img-fluid rounded" src="img/garage/5.jpg" alt="">
+              <img class="img-fluid rounded" src="img/coperture ingressi/5.jpg" alt="">
               </div>
               <div class="col-lg-6 padding">
-              <img class="img-fluid rounded" src="img/garage/6.jpg" alt="">
-              </div>
-              <div class="col-lg-6 padding">
-              <img class="img-fluid rounded" src="img/garage/7.jpg" alt="">
+              <img class="img-fluid rounded" src="img/coperture ingressi/6.jpg" alt="">
               </div>
           </div>
         </div>
@@ -666,6 +676,45 @@
       </div>
     </div>
   </div>
+</div>
+
+<!-- Modal 11-->
+<div class="modal fade" id="myModal13" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Teloneria</h4>
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6 padding">
+            <img class="img-fluid rounded" src="img/teloneria/1.jpg" alt="">
+            </div>
+            <div class="col-lg-6 padding">
+            <img class="img-fluid rounded" src="img/teloneria/2.jpg" alt="">
+            </div>
+            <div class="col-lg-6 padding">
+            <img class="img-fluid rounded" src="img/teloneria/3.jpg" alt="">
+            </div>
+            <div class="col-lg-6 padding">
+            <img class="img-fluid rounded" src="img/teloneria/4.jpg" alt="">
+            </div>
+            <div class="col-lg-6 padding">
+            <img class="img-fluid rounded" src="img/teloneria/5.jpg" alt="">
+            </div>
+            <div class="col-lg-6 padding">
+            <img class="img-fluid rounded" src="img/teloneria/6.jpg" alt="">
+            </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-revised" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 
     <footer class="footer text-faded text-center py-5">
