--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="keywords" content=" casette in legno sauna pavimento tettoie carport gazebo piscina i legni di Pettirossi">
+    <meta name="keywords" content=" casette in legno sauna pavimento tettoie carport gazebo piscina i legni dei Pettirossi">
     <meta name="description" content="casette saune pavimentazioni tettoie carport gazebo e costruzioni in legno realizzate su misura nella zona di Perugia">
     <meta name="author" content="Enrico Pettirossi">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -29,7 +29,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">I Legni Di Pettirossi</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">I Legni Dei Pettirossi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span>Menù</span>
         </button>
@@ -83,7 +83,7 @@
 
                 <span class="section-heading-lower">La nostra azienda</span>
               </h2>
-              <p class="mb-0">L'Azienda I Legni Di Pettirossi opera dal 1970, e basa la propria
+              <p class="mb-0">L'Azienda I Legni Dei Pettirossi opera dal 1970, e basa la propria
                 esperienza su una profonda conoscenza di tecniche e materiali selezionali
                 adatti a realizzare e personalizzare tutte le esigenze di ogni cliente. <br><br>
 
