--- a/store.html
+++ b/store.html
@@ -4,12 +4,12 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="keywords" content=" casette in legno sauna pavimento tettoie carport gazebo piscina i legni di Pettirossi">
+    <meta name="keywords" content=" casette in legno sauna pavimento tettoie carport gazebo piscina i legni dei Pettirossi">
     <meta name="description" content="casette saune pavimentazioni tettoie carport gazebo e costruzioni in legno realizzate su misura nella zona di Perugia">
     <meta name="author" content="Enrico Pettirossi">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>I Legni Di Pettirossi</title>
+    <title>I Legni Dei Pettirossi</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html">I Legni Di Pettirossi</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="index.html">I Legni Dei Pettirossi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span>Menù</span>
         </button>
