--- a/products.html
+++ b/products.html
@@ -184,7 +184,6 @@
                 </div>
               </div>
             </div>
-          </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-revised" data-dismiss="modal">Close</button>
           </div>
@@ -211,7 +210,7 @@
                             <img class="img-fluid rounded" src="img/tettoie/${i}.jpg" alt="">
                            </div>`
                   }
-                  row2.innerHTML = text1; 
+                  row2.innerHTML = text2; 
                 </script>
               </div>
             </div>
@@ -336,7 +335,7 @@
                   let text6 = ``;
                   for (let i = 1; i <= 7; i++) {
                     text6+=`<div class="col-lg-6 padding">
-                            <img class="img-fluid rounded" src="img/attCommerciali/${i}.jpg" alt="">
+                            <img class="img-fluid rounded" src="img/garage/${i}.jpg" alt="">
                            </div>`
                   }
                   row6.innerHTML = text6; 
